[project]
name = "nte-history-exporter"
version = "0.1.1"
description = "Cross-platform Neverness to Everness pull-history exporter."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nte-history-exporter = "nte_history_exporter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
